# bridge-cli

./: Cargo.toml  README.md
src/: bifrost_rpc.rs  command.rs  eos_rpc.rs  main.rs
