[package]
name = "bridge-cli"
version = "0.1.0"
authors = ["Dengjianping <djptux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.6", features = ["derive"] }
eos-chain = { git = "https://github.com/bifrost-finance/rust-eos" }
eos-keys = { git = "https://github.com/bifrost-finance/rust-eos" }
futures = "0.3.12"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp-core = "2.0"
sp-runtime = "2.0"
structopt = "0.3.21"
subxt = { version = "0.13", package = "substrate-subxt" }
tokio = { version = "1.0", features = ["full"] }

[patch.crates-io]
subxt = { git = "https://github.com/bifrost-finance/substrate-subxt.git", package = "substrate-subxt" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-metadata = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
